# cuebridge

./: .editorconfig  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  flake.nix  justfile  pyproject.toml  result
.github/workflows/: ci.yml
cuebridge/: __init__.py  __main__.py  agent.py  cancellation.py  cli.py  contracts.py  media.py  model.py  naming.py  service.py  subtitles.py
docs/: models-benchmark.md
tests/: conftest.py  test_agent.py  test_cli.py  test_media.py  test_model.py  test_naming.py  test_service.py  test_subtitles.py
