[project]
name = "cuebridge"
version = "0.1.0"
description = "CLI subtitle translator powered by LLMs."
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "accelerate>=1.13.0",
    "click>=8.3.1",
    "dotenv>=0.9.9",
    "langchain>=1.2.13",
    "langgraph>=1.1.3",
    "loguru>=0.7.3",
    "opentelemetry-api>=1.40.0",
    "pillow>=12.1.1",
    "pysubs2>=1.8.1",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "transformers>=5.3.0",
]

[project.scripts]
cuebridge = "cuebridge.cli:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "prek>=0.3.6",
    "pytest>=9.0.2",
    "ruff>=0.15.7",
]
o11y = [
    "opentelemetry-distro[otlp]>=0.61b0",
    "opentelemetry-instrumentation-langchain>=0.57.0",
    "opentelemetry-instrumentation-requests>=0.61b0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["cuebridge", "tests"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.hatch.build.targets.wheel]
packages = ["cuebridge"]
